--- a/package.json
+++ b/package.json
@@ -1,114 +1,112 @@
 {
-  "name": "fritter-starter",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "cd client && vue-cli-service serve main.ts",
-    "build": "cd client && vue-cli-service build main.ts",
-    "lint": "eslint . --fix --ext=.ts,.vue",
-    "start": "ts-node api/index.ts",
-    "dev-backend": "nodemon api/index.ts -e js,ts,json",
-    "dev": "npm run dev-backend & npm run serve"
-  },
-  "dependencies": {
-    "@types/natural": "^5.1.1",
-    "@types/stopword": "^2.0.0",
-    "connect-history-api-fallback": "^1.6.0",
-    "connect-mongo": "^4.6.0",
-    "cookie-parser": "~1.4.3",
-    "debug": "~4.3.4",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "express-handlebars": "^6.0.6",
-    "express-session": "^1.17.3",
-    "moment": "^2.29.4",
-    "mongoose": "^6.6.2",
-    "morgan": "~1.10.0",
-    "nanoid": "^3.3.4",
-    "natural": "^5.2.3",
-    "stopword": "^2.0.5",
-    "vue": "^2.7.13",
-    "vue-router": "^3.6.5",
-    "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.1.0"
-  },
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
-    "@types/express": "^4.17.14",
-    "@types/express-session": "1.17.0",
-    "@types/morgan": "^1.9.3",
-    "@types/uuid": "^8.3.4",
-    "@vue/cli-plugin-router": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
-    "eslint-config-xo": "^0.42.0",
-    "eslint-config-xo-typescript": "^0.53.0",
-    "eslint-plugin-vue": "^9.6.0",
-    "nodemon": "^2.0.20",
-    "ts-loader": "^9.4.1",
-    "ts-node": "^10.6.0",
-    "typescript": "^4.8.4",
-    "vue-template-compiler": "^2.7.13"
-  },
-  "eslintConfig": {
-    "parser": "vue-eslint-parser",
-    "parserOptions": {
-      "parser": "@typescript-eslint/parser",
-      "sourceType": "module"
+    "name": "fritter-starter",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "cd client && vue-cli-service serve main.ts",
+        "build": "cd client && vue-cli-service build main.ts",
+        "lint": "eslint . --fix --ext=.ts,.vue",
+        "start": "ts-node api/index.ts",
+        "dev": "nodemon api/index.ts -e js,ts,json"
     },
-    "overrides": [
-      {
-        "files": [
-          "**/*.ts"
-        ],
-        "excludedFiles": [
-          "client/**"
-        ],
-        "extends": [
-          "xo",
-          "xo-typescript/space",
-          "plugin:@typescript-eslint/recommended"
-        ],
-        "rules": {
-          "@typescript-eslint/comma-dangle": [
-            "error",
-            "never"
-          ],
-          "@typescript-eslint/no-extraneous-class": "off",
-          "new-cap": [
-            "error",
+    "dependencies": {
+        "apos-to-lex-form": "^1.0.5",
+        "connect-history-api-fallback": "^1.6.0",
+        "connect-mongo": "^4.6.0",
+        "cookie-parser": "~1.4.3",
+        "debug": "~4.3.4",
+        "dotenv": "^16.0.2",
+        "edit-distance": "^1.0.5",
+        "express": "^4.18.1",
+        "express-handlebars": "^6.0.6",
+        "express-session": "^1.17.3",
+        "moment": "^2.29.4",
+        "mongoose": "^6.6.2",
+        "morgan": "~1.10.0",
+        "nanoid": "^3.3.4",
+        "natural": "^5.2.3",
+        "stopword": "^2.0.5",
+        "vue": "^2.7.13",
+        "vue-router": "^3.6.5",
+        "vuex": "^3.6.2",
+        "vuex-persistedstate": "^4.1.0"
+    },
+    "devDependencies": {
+        "@babel/eslint-parser": "^7.19.1",
+        "@types/express": "^4.17.14",
+        "@types/express-session": "1.17.0",
+        "@types/morgan": "^1.9.3",
+        "@types/uuid": "^8.3.4",
+        "@vue/cli-plugin-router": "^5.0.8",
+        "@vue/cli-service": "^5.0.8",
+        "eslint-config-xo": "^0.42.0",
+        "eslint-config-xo-typescript": "^0.53.0",
+        "eslint-plugin-vue": "^9.6.0",
+        "nodemon": "^2.0.20",
+        "ts-node": "^10.6.0",
+        "typescript": "^4.6.4",
+        "vue-template-compiler": "^2.7.13"
+    },
+    "eslintConfig": {
+        "parser": "vue-eslint-parser",
+        "parserOptions": {
+            "parser": "@typescript-eslint/parser",
+            "sourceType": "module"
+        },
+        "overrides": [
             {
-              "capIsNewExceptionPattern": "^express\\.."
-            }
-          ],
-          "@typescript-eslint/naming-convention": [
-            "error",
+                "files": [
+                    "**/*.ts"
+                ],
+                "excludedFiles": [
+                    "client/**"
+                ],
+                "extends": [
+                    "xo",
+                    "xo-typescript/space",
+                    "plugin:@typescript-eslint/recommended"
+                ],
+                "rules": {
+                    "@typescript-eslint/comma-dangle": [
+                        "error",
+                        "never"
+                    ],
+                    "@typescript-eslint/no-extraneous-class": "off",
+                    "new-cap": [
+                        "error",
+                        {
+                            "capIsNewExceptionPattern": "^express\\.."
+                        }
+                    ],
+                    "@typescript-eslint/naming-convention": [
+                        "error",
+                        {
+                            "selector": "typeParameter",
+                            "format": [
+                                "PascalCase"
+                            ],
+                            "suffix": [
+                                "Schema",
+                                "Model"
+                            ]
+                        }
+                    ]
+                }
+            },
             {
-              "selector": "typeParameter",
-              "format": [
-                "PascalCase"
-              ],
-              "suffix": [
-                "Schema",
-                "Model"
-              ]
+                "files": [
+                    "**/*.vue"
+                ],
+                "extends": [
+                    "eslint:recommended",
+                    "plugin:vue/recommended"
+                ]
             }
-          ]
-        }
-      },
-      {
-        "files": [
-          "**/*.vue"
-        ],
-        "extends": [
-          "eslint:recommended",
-          "plugin:vue/recommended"
         ]
-      }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
     ]
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
 }
